<resources>
    <string name="app_name">Scooby</string>
    <string name="welcome_to_scooby_your_pet_home">Welcome to <font color="#513973">Scooby</font> your pet home!</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="explore">Explore</string>
    <string name="Login_Page_Title">Login to your pet home</string>
    <string name="Password">Password</string>
    <string name="Forget_Your_pass">Forgot your password?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account"><![CDATA["Create your account to spend more
     time & love with your pets"]]></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="not_on_scooby_yet">Not on Scooby yet?</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="already_a_scooby_member">Already a Scooby member?</string>
    <string name="tv_terms_of_service">By clicking Sign up or Log in, I agree to <font color="#513973"> Scooby’s \n Terms of Service</font> and  <font color="#513973">Privacy Policy</font>.</string>
    <string name="instruction_reset_pass">Don’t worry, It happens. Please enter the email address associated with your account, and we’ll send you a link to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="instruction_reset_password_2">
        "To keep your account secure, your new password
must be at least 8 characters long and contain a minimum
of 3 of the following: 1 number, 1 lowercase letter,
        1 uppercase letter or 1 special character.</string>
    <string name="create_new_password">create new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_one_time_password_on_fatma00_gmail_com">We will send you a one time password on fatma00@gmail.com</string>
    <string name="tv_incorrect_email_or_pass">"Email or Password is incorrect. Please try
again."</string>
    <string name="submit">Submit</string>
    <string name="title_card_blog_item">Dogs have a magic effect\': how pets can improve our mental health?</string>
    <string name="message">message</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="vet">Vet</string>
    <string name="boarding">Boarding</string>
    <string name="sitting">Sitting</string>
    <string name="pet_friendly_places">"Pet-friendly\nplaces"</string>
    <string name="grooming">Grooming</string>
    <string name="training">Training</string>
    <string name="supplies">Supplies</string>
    <string name="more">more</string>
    <string name="see_more">"see more  >"</string>
    <string name="services">Services</string>
    <string name="settings_and_privacy">Settings and privacy</string>
    <string name="help_center">Help Center</string>
    <string name="reminders">Reminders</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="do_you_need_help_with_your_pets">Do you need help with your pets?</string>
    <string name="pets_in_community">Pets in Community</string>
    <string name="let_your_pet_explore_the_world">Let your pet explore the world,</string>
    <string name="walk_with_scooby_and_share">Walk with <font color="#513973">Scooby</font> and share</string>
    <string name="info_with_your_friends">info with your friends</string>
    <string name="image_services">Image services</string>
    <string name="night">/night</string>
    <string name="hello">Hello,</string>
    <string name="your_pets">Your Pets</string>
    <string name="more_icon">more icon</string>
    <string name="dog_walking_cartoon">dog walking cartoon</string>
    <string name="blogs">Blogs</string>
    <string name="img_card_blog_home">img card blog home</string>
    <string name="pet_home_image">pet home image</string>
    <string name="back_ground_shadow_blog_home">back ground shadow blog home</string>
    <string name="requests">Requests</string>
    <string name="do_you_need_help_with_your_pets_book_what_you_re_looking_for">Do you need help with your pets?\nbook what you\'re looking for</string>
    <string name="daycare">Daycare</string>
    <string name="pet_friendly">Pet-friendly..</string>
    <string name="pet_taxi">Pet taxi</string>
    <string name="walking">Walking</string>
    <string name="booking">Booking</string>
    <string name="community">Community</string>
    <string name="home">Home</string>
    <string name="paws">Paws</string>
    <string name="nav_open">Drawer Open</string>
    <string name="nav_close">Drawer Closed</string>
    <string name="cash">Cash</string>
    <string name="user_name">User Name</string>
    <string name="my_pets">My Pets</string>
    <string name="add_pet">add pet</string>
    <string name="Add_pet">Add pet</string>
    <string name="balance">Balance</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="sava">Sava</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="phone">Phone number</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="important_dates">Important Dates</string>
    <string name="birthday">Birthday</string>
    <string name="adoption_day">Adoption Day</string>
    <string name="vaccines">Vaccines</string>
    <string name="anti_parasitical_treatments">Anti-parasitical treatments</string>
    <string name="medical_interventions">Medical interventions</string>
    <string name="nutrition">Nutrition</string>
    <string name="other_treatments">Other treatments</string>
    <string name="hi">Hi,</string>
    <string name="filters">Filters</string>
    <string name="veterinary">Veterinary</string>
    <string name="meet_the_doctors">Meet the Doctors</string>
    <string name="scooby_is_dedicated_to_providing_compassionate_quality_healthcare_to_your_pets_and_outstanding_customer_service_to_our_clients">Scooby is dedicated to providing compassionate,\n quality healthcare to your pets and outstanding\n customer service to our clients.</string>
    <string name="book_now">Book Now</string>
    <string name="veterinary_pharmacy">Veterinary Pharmacy</string>
    <string name="all_you_need_for_your_pets_health_care_scooby_delivers_to_your_doorstep">All you need for your pets health care\n Scooby delivers to your doorstep</string>
    <string name="order_now">Order Now</string>
    <string name="veterinary_nearby">Veterinary nearby</string>
    <string name="doctors">Doctors</string>
    <string name="what_worries_your_pet">What worries your pet?</string>
    <string name="book">Book</string>
    <string name="general">General</string>
    <string name="ears">Ears</string>
    <string name="injury">Injury</string>
    <string name="stomach">Stomach</string>
    <string name="image_pet">Image pet</string>
    <string name="tap_here_to_add_pet">tap here to add pet</string>
    <string name="back">back</string>
    <string name="what_is_your_pet_name">What is your pet name?</string>
    <string name="next">Next</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="what_is_your_pet_size">What is your pet size?</string>
    <string name="what_is_your_pet_breed">What is your pet breed?</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="free_pet_shelters">Free pet shelters</string>
    <string name="top_collections">Top collections</string>
    <string name="popular_cat_breads">Popular cat breads</string>
    <string name="cutest_dog_breads">Cutest dog breads</string>
    <string name="adopt_me">Adopt me</string>
    <string name="babies_waiting_for_you">Babies waiting for you</string>
    <string name="exit">exit</string>
    <string name="check_selected">Check selected</string>
    <string name="select_your_pets">Select your pets.</string>
    <string name="please_select_date_and_time_of_your_service">Please select date and time of your service.</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="please_select_duration_of_your_service">Please select duration of your service.</string>
    <string name="full_day">Full Day</string>
    <string name="half_day">Half Day</string>
    <string name="more_than_1_day">More than 1 Day</string>
    <string name="select_an_option">Select an option</string>
    <string name="where_do_you_need_your_service">Where do you need your service?</string>
    <string name="enter_your_location"> Enter your location</string>
    <string name="optional">(optional)</string>
    <string name="what_is_your_pet_adoption_date">What is your pet adoption date? <font color="#800F0F0F">(optional)</font></string>
    <string name="what_is_your_pet_type">What is your pet type?</string>
    <string name="_1_5kg">1-5kg</string>
    <string name="_6_10kg">6-10kg</string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="what_is_your_pet_gender">What is your pet gender?</string>
    <string name="_20_kg">20+kg</string>
    <string name="_11_20kg">11-20kg</string>
    <string name="what_is_your_pet_birthday">What is your pet birthday? <font color="#800F0F0F">(optional)</font></string>
    <string name="check_circle_yellow">check circle yellow</string>
    <string name="add_details">Add details</string>
    <string name="summery">summery</string>
    <string name="check_circle_gray">check circle gray</string>
    <string name="payment">Payment</string>
    <string name="write_any_other_things_we_need_to_know_needs_or_notes_of_your_pets">Write any other things we need to know, needs or notes of your pets. <font color="#800F0F0F">optional</font></string>
    <string name="ex_my_pet_isn_t_kind_with_other_pets_its_aggressive_or_sensitive_has_any_health_problems">Ex. my pet isn\'t kind with other pets, its aggressive or sensitive, has any health problems</string>
    <string name="do_you_need_pet_pickup_services">Do you need pet pickup services?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_a_valid_email_address_e_g_joe_mail_com">Please enter a valid email address, e.g. joe@mail.com</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="Continue">Continue</string>
    <string name="successfully_uploaded">Successfully uploaded!</string>
    <string name="don_t_worry_scooby_is_searching_for">Don\'t worry, Scooby is searching for</string>
    <string name="you_know_when_we_have_one">you know when we have one</string>
    <string name="your_pet_s_perfect_match_we_ll_let">your pet\'s perfect match! We\'ll let</string>
    <string name="back_to_home">Back to home</string>
</resources>