<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/toHomeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/toPawsFragment"
        android:icon="@drawable/paws_icon"
        android:title="@string/paws" />
    <item
        android:id="@+id/toCommunityFragment"
        android:icon="@drawable/community_icon"
        android:title="@string/community" />
    <item
        android:id="@+id/toBookingFragment"
        android:icon="@drawable/bookings_icon"
        android:title="@string/booking" />
    <item
        android:id="@+id/toProfileFragment"
        android:icon="@drawable/bookings_icon"
        android:title="@string/profile" />
</menu>