<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signin.login.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/dog"
                android:src="@drawable/dog" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/reset_password"
                    android:textColor="@color/black_80"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/instruction_reset_pass"
                    android:textColor="@color/gray" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_reset_pass_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/enter_your_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/msg_error_email_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/please_enter_your_email_address"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:drawableLeftCompat="@drawable/cancel" />

                <TextView
                    android:id="@+id/msg_error_email_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/please_enter_a_valid_email_address_e_g_joe_mail_com"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:drawableLeftCompat="@drawable/cancel" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/primary"
                    android:fontFamily="@font/roboto"
                    android:paddingVertical="12dp"
                    android:text="@string/Continue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="16dp" />

                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/back"
                    android:textColor="@color/black_80"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>