<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_BG"
    tools:context=".scooby.request.NotesRequestFragment">

    <ImageView
        android:id="@+id/back_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_left_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="50dp"
        android:background="@color/line_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/check_circle_yellow"
        android:src="@drawable/ic_check_circle_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_screen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto"
        android:text="@string/add_details"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_screen" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/check_circle_gray"
        android:src="@drawable/check_circle_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_screen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto"
        android:text="@string/summery"
        android:textColor="@color/gray_request"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_screen" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/check_circle_gray"
        android:src="@drawable/check_circle_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_screen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/payment"
        android:textColor="@color/gray_request"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_screen" />

    <TextView
        android:id="@+id/note_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="16dp"
        android:paddingEnd="32dp"
        android:text="@string/write_any_other_things_we_need_to_know_needs_or_notes_of_your_pets"
        android:textColor="@color/black_font"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/notes_et"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:hint="@string/ex_my_pet_isn_t_kind_with_other_pets_its_aggressive_or_sensitive_has_any_health_problems"
        android:inputType="textMultiLine"
        android:maxLength="300"
        android:padding="16dp"
        android:textColor="@color/black_font"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_tv"
        tools:ignore="Autofill,SmallSp" />

    <TextView
        android:id="@+id/pickup_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/do_you_need_pet_pickup_services"
        android:textColor="@color/black_font"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_et" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/yes_card"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/app_background"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickup_tv"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="63dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/yes"
                android:textColor="@color/black_font"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/yes_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/check_selected"
                android:src="@drawable/ic_check_circle_12"
                android:visibility="gone" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/no_card"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/app_background"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toEndOf="@id/yes_card"
        app:layout_constraintTop_toBottomOf="@id/pickup_tv"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="63dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/no"
                android:textColor="@color/black_font"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/no_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/check_selected"
                android:src="@drawable/ic_check_circle_12"
                android:visibility="gone" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_btn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray_btn"
            app:cornerRadius="4dp"
            app:icon="@drawable/exit_icon"
            app:iconSize="48dp"
            app:iconTint="@color/black_clear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="3"
            android:padding="0dp"
            android:text="@string/next"
            app:cornerRadius="4dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>